# Function-Programming

./: README.md  index.html  package.yaml  stock-sim.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Controller.hs  Helpers.hs  Types.hs  UI.hs
