cabal-version:      2.4
name:               stock-sim
version:            0.1.0.0
author:             Your Name
maintainer:         your.email@example.com
build-type:         Simple

common deps
    build-depends:    base >= 4.7 && < 5
                    , stm
                    , containers
                    , time
                    , random
                    , brick
                    , vty
                    , text
    default-language: Haskell2010

executable stock-sim
    import:           deps
    main-is:          Main.hs
    other-modules:    Types
                    , Controller
                    , UI
                    , Helpers
    hs-source-dirs:   Final