cabal-version:      2.4
name:               stock-sim
version:            0.1.0.0
author:             Your Name
build-type:         Simple

common deps
    build-depends:    base >= 4.7 && < 5
                    , stm
                    , containers
                    , time
                    , random
                    , websockets
                    , wai
                    , wai-websockets
                    , warp
                    , aeson
                    , text
                    , http-types 
    default-language: Haskell2010

executable stock-sim
    import:           deps
    main-is:          Main.hs
    other-modules:    Types
                    , Controller
    hs-source-dirs:   app, src